# Generic_EQ

./: CMakeLists.txt  README.md  cmake_log
resource/: GNRC_EQ.rc  GNRC_EQ_editor.uidesc  au-info.plist
source/: GNRC_EQ_cids.h  GNRC_EQ_controller.cpp  GNRC_EQ_controller.h  GNRC_EQ_entry.cpp  GNRC_EQ_fft.cpp  GNRC_EQ_processor.cpp  GNRC_EQ_processor.h  GNRC_EQ_shared.h  version.h
